--- a/css/myCSS.css
+++ b/css/myCSS.css
@@ -20,9 +20,9 @@ p {
 ul {
   padding-left: 0;
 }
-.container{
-  /* max-width: initial; */
-}
+/* .container{
+  max-width: initial;
+} */
 #header {
   border-bottom: 1px solid #f2f2f2;
   /* margin-bottom: 20px; */
@@ -150,6 +150,7 @@ ul {
   width: 420px;
   max-width: 80%;
   border-top: 1px solid #aaa;
+  margin: 20px auto;
 }
 .main_bottom .wrapper-item {
   padding: 15px;
