--- a/css/myCSS.css
+++ b/css/myCSS.css
@@ -20,7 +20,7 @@ p {
 ul {
   padding-left: 0;
 }
-.btn-premium{
+.btn-premium {
   background-color: #0085c8;
   border-color: #61d1ff;
   border-radius: 1px;
@@ -28,7 +28,8 @@ ul {
   border: none;
   padding: 8px 25px;
 }
-.btn-premium:hover, .btn-premium:focus{
+.btn-premium:hover,
+.btn-premium:focus {
   background-color: #61d1ff;
   color: #fff;
   outline: none;
@@ -110,20 +111,30 @@ ul {
     margin-top: 0;
   }
 }
-#menu {
+
+.sticky {
   border-top: 1px solid #f2f2f2;
-  /* position: fixed;
+  background-color: #fff;
+  /* position: -webkit-sticky;
+  position: sticky;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 10; */
 }
-#menu li {
+.fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+}
+.sticky li {
   display: inline-block;
   margin-right: 40px;
   font-size: 16px;
 }
-#menu li a {
+.sticky li a {
   display: inline-block;
   padding: 20px;
   text-decoration: none;
@@ -131,22 +142,22 @@ ul {
   height: 80px;
   color: #000000;
 }
-#menu li a.active {
+.sticky li a.active {
   color: #14a0e6;
   border-bottom: 2px solid #14a0e6;
 }
-#menu li a:hover {
+.sticky li a:hover {
   color: #14a0e6;
   border-bottom: 2px solid #14a0e6;
 }
-@media (max-width: 767px){
-  #menu li {
+@media (max-width: 767px) {
+  .sticky li {
     margin-right: 10px;
     font-size: 14px;
   }
 }
-@media (max-width: 991px){
-  #menu li {
+@media (max-width: 991px) {
+  .sticky li {
     margin-right: 10px;
   }
 }
@@ -159,6 +170,7 @@ ul {
 } */
 #main {
   padding-bottom: 40px;
+  padding-top: 15px;
   background-color: #fafafa;
 }
 .main_top {
@@ -236,13 +248,13 @@ ul {
 .footer_top_right {
   padding: 40px 10px 40px 50px;
 }
-@media (min-width: 768px){
+@media (min-width: 768px) {
   #footer-top .footer_top_right {
     padding-left: 50px;
     float: right;
   }
 }
-@media (min-width: 768px){
+@media (min-width: 768px) {
   /* .col-sm-5 {
     width: 41.66666667%;
   } */
@@ -274,14 +286,14 @@ ul {
   /* padding: 20px; */
   margin-bottom: 20px;
 }
-.input-group{
+.input-group {
   margin-bottom: 15px;
 }
-.input-group-text{
-  color: rgb(112, 112, 112); 
-  background-color: #fff; 
-  font-size: 11px; 
-  line-height: 18px; 
+.input-group-text {
+  color: rgb(112, 112, 112);
+  background-color: #fff;
+  font-size: 11px;
+  line-height: 18px;
   color: #444;
 }
 /* ---------------- */
@@ -289,7 +301,7 @@ ul {
 .border_wrapper {
   border-right: 1px solid #c8c8c8;
 }
-@media (max-width: 991px){
+@media (max-width: 991px) {
   #infor .border_wrapper {
     border-right: none;
   }
@@ -326,6 +338,12 @@ ul {
 
 /* ---------------- */
 /* đánh giá.html */
+.bg-premium {
+  background-color: #0085c8 !important;
+}
+.text-premium {
+  color: #0085c8 !important;
+}
 .box {
   padding: 20px;
   margin-bottom: 20px;
@@ -336,6 +354,137 @@ ul {
 .review_title {
   font-size: 20px;
   margin-bottom: 25px;
+}
+#review .star-bar {
+  font-size: 0;
+  position: relative;
+  white-space: nowrap;
+  display: inline-block;
+  margin: 2px auto;
+}
+#review .review-box .rating i {
+  font-size: 30px;
+  padding: 4px 4px 2px 7px;
+}
+#review .rating i {
+  font-size: 20px;
+  padding: 3px;
+  color: #fff;
+  cursor: pointer;
+  background: #ccc;
+  margin-right: 3px;
+}
+#review .active-star {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 1;
+  overflow: hidden;
+}
+.c100.small {
+  font-size: 80px;
+}
+.c100 {
+  position: relative;
+  font-size: 120px;
+  width: 1em;
+  height: 1em;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+  float: left;
+  margin: 0 0.1em 0.1em 0;
+  background-color: #cccccc4f;
+}
+.small,
+small {
+  font-size: 85%;
+}
+#review .c100 > span {
+  color: #757575;
+}
+.c100 > span {
+  color: #757575;
+}
+.c100 > span {
+  position: absolute;
+  width: 100%;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 5em;
+  line-height: 5em;
+  font-size: 0.2em;
+  color: #ccc;
+  display: block;
+  text-align: center;
+  white-space: nowrap;
+  -webkit-transition-property: all;
+  -moz-transition-property: all;
+  -o-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  -webkit-transition-timing-function: ease-out;
+  -moz-transition-timing-function: ease-out;
+  -o-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.c100 *,
+.c100 *:before,
+.c100 *:after {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+}
+.c100 .slice {
+  position: absolute;
+  width: 1em;
+  height: 1em;
+  clip: rect(0em, 1em, 1em, 0.5em);
+}
+.c100.p100 .bar {
+  -webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+  transform: rotate(360deg);
+}
+.fill {
+  position: absolute;
+  border: 0.08em solid #307bbb;
+  width: 0.84em;
+  height: 0.84em;
+  clip: rect(0em, 0.5em, 1em, 0em);
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+}
+#review .review-overall-text {
+  margin: 30px 0 0 -10px;
+  font-size: 15px;
+}
+.bold {
+  font-weight: bold;
+}
+.rate-block {
+  margin-bottom: 10px;
+}
+#review .rating-small {
+  margin-top: 10px;
 }
 blockquote {
   font-size: inherit;
